--- a/packages/extension/public/index.html
+++ b/packages/extension/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
-    <title> Enkrypt Chrome Extension - Everything in the blockchain made easy  </title>
+    <title> Enkrypt Extension - Everything in the blockchain made easy  </title>
   </head>
   <body>
     <noscript>
