--- a/macos/Enkrypt/Enkrypt/Base.lproj/Main.html
+++ b/macos/Enkrypt/Enkrypt/Base.lproj/Main.html
@@ -10,10 +10,16 @@
     <script src="../Script.js" defer></script>
 </head>
 <body>
-    <img src="../Icon.png" width="128" height="128" alt="Enkrypt Icon">
-    <p class="state-unknown">You can turn on Enkrypt’s extension in Safari Extensions preferences.</p>
-    <p class="state-on">Enkrypt’s extension is currently on. You can turn it off in Safari Extensions preferences.</p>
-    <p class="state-off">Enkrypt’s extension is currently off. You can turn it on in Safari Extensions preferences.</p>
-    <button class="open-preferences">Quit and Open Safari Extensions Preferences…</button>
+    <img class="logo" src="../Logo.png" width="156" height="32" alt="Enkrypt Icon" />
+    <h1>Multiple Chains. One Wallet.</h1>
+    <div class="block">
+      <h4>How to enable Enkrypt</h4>
+      <p class="state-unknown">In <b>Safari Preferences</b> on the <b>Extensions tab</b>, click the checkbox next to Enkrypt to enable it. Follow further instructions on the opened Safari tab.</p>
+      <p class="state-on">In <b>Safari Preferences</b> on the <b>Extensions tab</b>, click the checkbox next to Enkrypt to enable it. Follow further instructions on the opened Safari tab.</p>
+      <p class="state-off">In <b>Safari Preferences</b> on the <b>Extensions tab</b>, click the checkbox next to Enkrypt to enable it. Follow further instructions on the opened Safari tab.</p>
+      <img class="image" src="../Light.png" width="540" alt="Enkrypt’s extension" />
+      <img class="image-dark" src="../Dark.png" width="540" alt="Enkrypt’s extension" />
+    </div>
+    <button class="open-preferences">Open Safari Extensions Preferences</button>
 </body>
 </html>
