--- a/macos/Enkrypt/Enkrypt/Base.lproj/Main.html
+++ b/macos/Enkrypt/Enkrypt/Base.lproj/Main.html
@@ -17,8 +17,8 @@
       <p class="state-unknown">In <b>Safari Preferences</b> on the <b>Extensions tab</b>, click the checkbox next to Enkrypt to enable it. Follow further instructions on the opened Safari tab.</p>
       <p class="state-on">In <b>Safari Preferences</b> on the <b>Extensions tab</b>, click the checkbox next to Enkrypt to enable it. Follow further instructions on the opened Safari tab.</p>
       <p class="state-off">In <b>Safari Preferences</b> on the <b>Extensions tab</b>, click the checkbox next to Enkrypt to enable it. Follow further instructions on the opened Safari tab.</p>
-      <img class="image" src="../Light.png" width="540" alt="Enkrypt’s extension" />
-      <img class="image-dark" src="../Dark.png" width="540" alt="Enkrypt’s extension" />
+      <img class="image" src="../Light.png" width="540" alt="Enkrypt's extension" />
+      <img class="image-dark" src="../Dark.png" width="540" alt="Enkrypt's extension" />
     </div>
     <button class="open-preferences">Open Safari Extensions Preferences</button>
 </body>
