--- a/packages/extension-vite/onboard.html
+++ b/packages/extension-vite/onboard.html
@@ -15,6 +15,6 @@
       >
     </noscript>
     <div id="app"></div>
-    <script type="module" src="/src/ui/provider-pages/main.ts"></script>
+    <script type="module" src="/src/ui/onboard/main.ts"></script>
   </body>
 </html>
